--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.0",
-    "express": "^4.15.0"
+    "express": "^4.15.0",
+    "multer": "^1.3.0",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "chai": "^3.5.0",
