--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Express tutorial",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "mocha -S"
   },
   "repository": "http://github.com/TechMaster/learn_express",
