--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.0",
+    "csurf": "^1.9.0",
     "express": "^4.15.0",
+    "morgan": "^1.8.1",
     "multer": "^1.3.0",
+    "node-statsd": "^0.1.1",
+    "nunjucks": "^3.0.0",
+    "response-time": "^2.3.2",
+    "serve-index": "^1.8.0",
     "shortid": "^2.2.8"
   },
   "devDependencies": {
